--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "lt-codes",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "index.js",
+  "typings": "index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc --build tsconfig.json"
   },
   "repository": {
     "type": "git",
@@ -19,5 +21,14 @@
   "homepage": "https://github.com/ambrazasp/lt-codes#readme",
   "dependencies": {
     "moment": "^2.29.4"
+  },
+  "devDependencies": {
+    "@types/node": "^20.10.5",
+    "prettier": "^2.5.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^4.9.5"
+  },
+  "engines": {
+    "node": ">=16.0.0"
   }
 }
