--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,17 @@ jobs:
       - name: Install dependencies
         run: npm i --silent
 
+      - name: Run ESLint
+        run: npm run lint:sarif
+        continue-on-error: true
+
+      - name: Upload ESLint analysis results to GitHub
+        uses: github/codeql-action/upload-sarif@v2
+        with:
+          sarif_file: eslint-results.sarif
+          wait-for-processing: true
+          category: ESLint
+
   validate:
     name: Validate build & test
     runs-on: ubuntu-latest
@@ -43,6 +54,6 @@ jobs:
 
       - name: Install dependencies
         run: npm i --silent
-      
+
       - name: Build
         run: npm run build
