--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "typings": "index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc --build tsconfig.json"
+    "build": "tsc --build tsconfig.json",
+    "lint": "eslint --ext .js,.ts .",
+    "lint:sarif": "set SARIF_ESLINT_EMBED=true && npm run lint -- --format @microsoft/eslint-formatter-sarif --output-file eslint-results.sarif"
   },
   "repository": {
     "type": "git",
@@ -23,7 +25,15 @@
     "moment": "^2.29.4"
   },
   "devDependencies": {
+    "@microsoft/eslint-formatter-sarif": "^3.0.0",
     "@types/node": "^20.10.5",
+    "@typescript-eslint/eslint-plugin": "^5.11.0",
+    "@typescript-eslint/parser": "^5.11.0",
+    "eslint": "^8.8.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
+    "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.5.1",
     "ts-node": "^10.9.2",
     "typescript": "^4.9.5"
